Add description for me.

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ email: forwardcommandpost@gmail.com
 members:
   - name: thesupremecommander
     position: Founder & Developer
-    text:
+    text: thesupremecommander is distinguished for his passion, dedication, experience, and skill, which when combined become a potent force allowing him to seek out solutions to novel and complex technical problems.
     img: thesupremecommander.jpg
     social:
       - title: steam
