Change uberchain's image.

--- a/_config.yml
+++ b/_config.yml
@@ -66,10 +66,10 @@ members:
         url: http://reddit.com/u/thesupremecommander
       - title: tumblr
         url: http://thesupremecmdr.tumblr.com
-  - name: uberchain
+  - name: Ness 'uberchain' Delacroix
     position: Artist & Animator
     text: uberchain comes from a strong background of illustration and design with tenacity and enthusiasm - a zeal that contributes to their video editing, animation, and graphic design talents.
-    img: thesupremecommander.jpg
+    img: uberchain.jpg
     social:
       - title: steam
         url: http://steamcommunity.com/id/spameidareyou
