Make updates to the site.

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ social:
     url: http://steamcommunity.com/groups/fwdcp
   - title: github
     url: http://github.com/fwdcp
+  - title: trello
+    url: https://trello.com/forwardcommandpost
   - title: paypal
     url: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZJAZP9L4A6RHJ
 
