Change uberchain's avatar to her more standard one.

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ members:
   - name: Ness 'uberchain' Delacroix
     position: Artist & Animator
     text: uberchain comes from a strong background of illustration and design with tenacity and enthusiasm - a zeal that contributes to their video editing, animation, and graphic design talents.
-    img: uberchain.jpg
+    img: uberchain.png
     social:
       - title: steam
         url: http://steamcommunity.com/id/spameidareyou
