--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ colors:  #in hex code if not noted else
 # Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
 social:
   - title: steam
-    url: http://steamcommunity.com/groups/fwdcp
+    url: https://steamcommunity.com/groups/fwdcp
   - title: github
-    url: http://github.com/fwdcp
+    url: https://github.com/fwdcp
   - title: trello
     url: https://trello.com/forwardcommandpost
   - title: paypal
@@ -53,13 +53,13 @@ members:
     img: thesupremecommander.jpg
     social:
       - title: steam
-        url: http://steamcommunity.com/id/thesupremecommander
+        url: https://steamcommunity.com/id/thesupremecommander
       - title: envelope
         url: mailto:thesupremecmdr@gmail.com
       - title: github
-        url: http://github.com/thesupremecommander
+        url: https://github.com/thesupremecommander
       - title: twitter
-        url: http://twitter.com/thesupremecmdr
+        url: https://twitter.com/thesupremecmdr
       - title: twitch
         url: http://twitch.tv/thesupremecommander
   - name: Ness 'uberchain' Delacroix
@@ -68,15 +68,15 @@ members:
     img: uberchain.png
     social:
       - title: steam
-        url: http://steamcommunity.com/id/spameidareyou
+        url: https://steamcommunity.com/id/spameidareyou
       - title: deviantart
-        url: http://uberchain.deviantart.com
+        url: https://uberchain.deviantart.com
       - title: tumblr
         url: http://uberchain.tumblr.com
       - title: twitter
-        url: http://twitter.com/uberchain
+        url: https://twitter.com/uberchain
       - title: youtube
-        url: http://youtube.com/uberchainyt
+        url: https://youtube.com/uberchainyt
 
 # Partners information. Shown on Home and About pages.
 partners:
@@ -89,15 +89,15 @@ partners:
     img: b4nny.png
     social:
       - title: steam
-        url: http://steamcommunity.com/id/b4nny
+        url: https://steamcommunity.com/id/b4nny
       - title: twitch
         url: http://twitch.tv/b4nny
       - title: youtube
-        url: http://youtube.com/gavinc27
+        url: https://youtube.com/gavinc27
       - title: twitter
-        url: http://twitter.com/uberchain
+        url: https://twitter.com/uberchain
       - title: soundcloud
-        url: http://soundcloud.com/gavinc-1
+        url: https://soundcloud.com/gavinc-1
 
 # Short text about your company. Shown in footer on every page and also separately on Home and Contact page.
 about: "Forward Command Post is a group dedicated to improving the gaming experience, currently focused on Team Fortress 2."
