--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ social:
     url: https://trello.com/forwardcommandpost
   - title: paypal
     url: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZJAZP9L4A6RHJ
+  - title: slack
+    url: https://fwdcp.slack.com
 
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
 # address:
