--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "http://fwdcp.net"
 
 # Build settings
 markdown: kramdown
-permalink: /:categories/:title
+permalink: /blog/:categories/:title
 excerpt_separator: <!--more--> #use this in posts to define how long the excerpt of the post (that is shown on the Blog page) is
 
 colors:  #in hex code if not noted else
@@ -21,6 +21,19 @@ colors:  #in hex code if not noted else
   footer_heading: "#ffffff"
   footer_content: "#bfc9d3"
 
+collections:
+  projects:
+    output: true
+
+defaults:
+  - scope:
+      type: posts
+    values:
+      layout: post
+  - scope:
+      type: projects
+    values:
+      layout: project
 
 ### CONTACT SETTINGS ###
 
