--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ partners:
       - title: youtube
         url: https://youtube.com/gavinc27
       - title: twitter
-        url: https://twitter.com/uberchain
+        url: https://twitter.com/GrantVincent27
       - title: soundcloud
         url: https://soundcloud.com/gavinc-1
 
