Fix projects not rendering properly.

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,10 @@ defaults:
       type: members
     values:
       layout: member
+  - scope:
+      type: projects
+    values:
+      layout: project
 
 ### CONTACT SETTINGS ###
 
