--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ markdown: kramdown
 permalink: /blog/:categories/:title
 excerpt_separator: <!--more--> #use this in posts to define how long the excerpt of the post (that is shown on the Blog page) is
 
+paginate: 5
+paginate_path: "/blog/:num/"
+
 colors:  #in hex code if not noted else
   primary: "#00b3fe" #"#F70031"
   primary_rgb: "0,179,254" #"247,0,49" #rgb of the primary. Needed in some places for the transparency effect.
